@@ -11,7 +11,7 @@ import jakarta.annotation.PostConstruct;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -43,7 +43,7 @@ public class FirebaseService {
 
         try {
             if (FirebaseApp.getApps().isEmpty()) {
-                InputStream serviceAccount = Files.newInputStream(Paths.get(credentialsPath));
+                InputStream serviceAccount = Files.newInputStream(Path.of(credentialsPath));
                 FirebaseOptions options = FirebaseOptions.builder().setCredentials(GoogleCredentials.fromStream(serviceAccount)).build();
                 FirebaseApp.initializeApp(options);
                 initialized = true;
